add cpu & bw frequency step

--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -933,13 +933,13 @@
 		qcom,num-clusters = <2>;
 		qcom,speed0-bin-v0-cl =
 			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>,
-			< 1958400000 6>,
-			< 2016000000 7>;
+			<  268800000 1>,
+			<  480000000 2>,
+			<  652800000 3>,
+			< 1036800000 4>,
+			< 1401600000 5>,
+			< 1689600000 6>,
+			< 1804800000 7>;
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
 			<  261120000 1>,
@@ -951,13 +951,13 @@
 			<  806400000 7>;
 		qcom,speed2-bin-v0-cl =
 			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>,
-			< 1958400000 6>,
-			< 2016000000 7>;
+			<  268800000 1>,
+			<  480000000 2>,
+			<  652800000 3>,
+			< 1036800000 4>,
+			< 1401600000 5>,
+			< 1689600000 6>,
+			< 1804800000 7>;
 		qcom,speed2-bin-v0-cci =
 			<          0 0>,
 			<  261120000 1>,
@@ -969,15 +969,13 @@
 			<  806400000 7>;
 		qcom,speed7-bin-v0-cl =
 			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>,
-			< 1958400000 6>,
-			< 2016000000 7>,
-			< 2150400000 8>,
-			< 2208000000 9>;
+			<  268800000 1>,
+			<  480000000 2>,
+			<  652800000 3>,
+			< 1036800000 4>,
+			< 1401600000 5>,
+			< 1689600000 6>,
+			< 1804800000 7>;
 		qcom,speed7-bin-v0-cci =
 			<          0 0>,
 			<  261120000 1>,
@@ -991,11 +989,13 @@
 			<  883200000 9>;
 		qcom,speed6-bin-v0-cl =
 			<          0 0>,
-			<  652800000 1>,
-			< 1036800000 2>,
-			< 1401600000 3>,
-			< 1689600000 4>,
-			< 1804800000 5>;
+			<  268800000 1>,
+			<  480000000 2>,
+			<  652800000 3>,
+			< 1036800000 4>,
+			< 1401600000 5>,
+			< 1689600000 6>,
+			< 1804800000 7>;
 		qcom,speed6-bin-v0-cci =
 			<          0 0>,
 			<  261120000 1>,
@@ -1022,15 +1022,13 @@
 			 <&clock_cpu clk_a53_pwr_clk>;
 
 		qcom,cpufreq-table =
+			 <  268800 >,
+			 <  480000 >,
 			 <  652800 >,
 			 < 1036800 >,
 			 < 1401600 >,
 			 < 1689600 >,
-			 < 1804800 >,
-			 < 1958400 >,
-			 < 2016000 >,
-			 < 2150400 >,
-			 < 2208000 >;
+			 < 1804800 >;
 	};
 
 	cpubw: qcom,cpubw {
@@ -1039,6 +1037,8 @@
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
+			<   381 /*  49.9  MHz */ >,
+			<   572 /*  75    MHz */ >,
 			<   769 /*  100.8 MHz */ >,
 			<  1611 /*  211.2 MHz */ >,     /*Low SVS*/
 			<  2124 /*  278.4 MHz */ >,
@@ -1058,6 +1058,8 @@
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
+			<   381 /*  49.9  MHz */ >,
+			<   572 /*  75    MHz */ >,
 			<   769 /*  100.8 MHz */ >,
 			<  1611 /*  211.2 MHz */ >,     /*Low SVS*/
 			<  2124 /*  278.4 MHz */ >,
@@ -1084,21 +1086,23 @@
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
 		cpu-to-dev-map =
+			 <  268800  572 >,
+			 <  480000  769 >,
 			 <  652800  1611>,
 			 < 1036800  3221>,
 			 < 1401600  5859>,
 			 < 1689600  6445>,
-			 < 1804800  7104>,
-			 < 1958400  7104>,
-			 < 2208000  7104>;
+			 < 1804800  7104>;
 		};
 
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map =
-				<  652800 1611 >,
-				< 1401600 3221 >,
-				< 2208000 5859 >;
+				<  268800 381  >,
+				<  480000 572  >,
+				<  652800 769  >,
+				< 1036800 1611 >,
+				< 1401600 3221 >;
 		};
 	};
 
