--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -7,6 +7,7 @@
 CONFIG_STATE_NOTIFIER=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
