--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -9,6 +9,7 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_EXFAT_FS=y
+ONFIG_SOUND_CONTROL=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
