chewy_defconfig: Enable msm track freq
Signed-off-by: Morgan Lee <morganleezd2003@googlemail.com>

--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -12,6 +12,7 @@ CONFIG_EXFAT_FS=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_LCD_NOTIFIER=y
 CONFIG_POWERSUSPEND=y
+CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
