chewy_defconfig: enable snappy compression
Signed-off-by: Morgan Lee <morganleezd2003@googlemail.com>

--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -16,6 +16,8 @@ CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
 CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_POLY1305=y
 CONFIG_CRYPTO_CHACHA20=y
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
