chewy_defconfig: add minimum prefetch size for dm-verity
Signed-off-by: Morgan Lee <morganleezd2003@googlemail.com>

--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -18,6 +18,8 @@ CONFIG_CRYPTO_POLY1305=y
 CONFIG_CRYPTO_CHACHA20=y
 CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
