--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -20,6 +20,9 @@ CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
 CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
+CONFIG_ZSWAP=y
+CONFIG_ZPOOL=y
+CONFIG_FRONTSWAP=y 
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -446,12 +449,10 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CLEANCACHE=y
-# CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_AREAS=7
-# CONFIG_ZPOOL is not set
 CONFIG_ZBUD=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
