--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -22,7 +22,10 @@ CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
 CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
 CONFIG_ZSWAP=y
 CONFIG_ZPOOL=y
-CONFIG_FRONTSWAP=y 
+CONFIG_FRONTSWAP=y
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_PRIO=2
+CONFIG_RCU_BOOST_DELAY=500
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -130,7 +133,6 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
 CONFIG_RCU_NOCB_CPU=y
 # CONFIG_RCU_NOCB_CPU_NONE is not set
 # CONFIG_RCU_NOCB_CPU_ZERO is not set
