--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -27,6 +27,7 @@ CONFIG_RCU_BOOST=y
 CONFIG_RCU_BOOST_PRIO=2
 CONFIG_RCU_BOOST_DELAY=500
 CONFIG_FRANDOM=y
+CONFIG_QNS_SYSTEM=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
