chewy_defconfig: enable electron govt
Signed-off-by: Morgan Lee <chewymorgy@gmail.com>

--- a/arch/arm64/configs/chewy_defconfig
+++ b/arch/arm64/configs/chewy_defconfig
@@ -28,6 +28,7 @@ CONFIG_RCU_BOOST_PRIO=2
 CONFIG_RCU_BOOST_DELAY=500
 CONFIG_FRANDOM=y
 CONFIG_QNS_SYSTEM=y
+CONFIG_CPU_FREQ_GOV_ELECTRON=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
