--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  one:
+  build:
     docker:
       - image: debian:stretch
     steps:
@@ -12,7 +12,7 @@ jobs:
         - sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so
         - sudo apt-get install -y ccache && echo 'export PATH="/usr/lib/ccache:$PATH"' | tee -a ~/.bashrc &&source ~/.bashrc && echo $PATH
         - export USE_CCACHE=1
-  two:
+  build:
     docker:
       - image: debian:stretch
     steps:
@@ -25,9 +25,3 @@ jobs:
       - export KERNELDIR=${HOME}/ChewyKernel
       - cd $HOME/ChewyKernel
       - ./chewy/scripts/kernel.sh
-workflows:
-  version: 2
-  one_and_two:
-    jobs:
-      - one
-      - two
